# odoo_instance_manager_app

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  odoo_instance_manager.py  pyproject.toml
.claude/: settings.json
.claude/skills/: eunomai-skills-audit.md
.github/workflows/: ci.yml  release.yml
docs/: addon-inventory.md  architecture.md  configuration-reference.md  disk-usage.md  firewall.md  glossary.md  health-check.md  installation.md  instance-management.md  language.md  log-rotation.md  platforms.md  safe-controls.md  scheduled-backups.md  security-fail2ban.md  server-audit.md
docs/decisions/: 0001-plan-preview-apply-safety.md  0002-adopt-openspec-and-eunomai.md
docs/operations/: addon-inventory.md  disk-usage.md  health-check.md  instance-management.md  log-rotation.md  scheduled-backups.md
docs/security/: firewall.md  safe-controls.md  security-fail2ban.md
instance_manager/: __init__.py  i18n.py  models.py  planners.py  prompts.py  system.py  ui.py  workflows.py
instance_manager/workflows/: __init__.py  _core.py  addons.py  backup_restore.py  common.py  diskusage.py  fail2ban.py  firewall.py  health.py  install.py  logrotate.py  manage.py  purge.py  report.py  scheduled_backup.py  services.py
openspec/changes/addon-inventory-filter-export/: tasks.md
openspec/changes/duplicate-frees-source-connections/: proposal.md
openspec/changes/english-canonical-localization/: tasks.md
tests/: test_addons.py  test_backup_restore.py  test_db_existence.py  test_health.py  test_i18n.py  test_models.py  test_planners.py  test_production_defaults.py  test_prompts.py  test_system.py  test_ui.py  test_ux_helpers.py  test_workflow_helpers.py  test_workflows_validation.py
(+127 files in other folders)
